--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "csv": "^5.3.2",
     "csv-express": "^1.2.2",
     "csv-parser": "^3.0.0",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "formidable": "^3.5.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.1",
     "nodemon": "^3.0.1",
